--- a/default.html
+++ b/default.html
@@ -1,7 +1,16 @@
-Welcome to your new site.....
-<b>i am bold</b>
-<<<<<<< HEAD
-<b>hello</b>
-=======
-..........
->>>>>>> origin/master
+<!DOCTYPE html>
+<html>
+<head>
+<title>
+Stuff
+</title>
+</head>
+<body>
+<h1>
+Stuff
+</h1>
+<p>
+This page is about stuff.
+</p>
+</body>
+</html>
